fix login register issue

--- a/views/home_page.ejs
+++ b/views/home_page.ejs
@@ -47,10 +47,10 @@ OURSELVES THIS CONSTITUTION.</b></pre>
       <center>
 
         <form action="/login" method="GET">
-          <button type="button" class="btn btn-success">Login</button>
+          <button type="submit" class="btn btn-success">Login</button>
         </form>
         <form action="/register" method="GET">
-          <button type="button" class="btn btn-success">Register</button>
+          <button type="submit" class="btn btn-success">Register</button>
         </form>
       </center>
     </div>
