fixed registration page

--- a/views/home_page.ejs
+++ b/views/home_page.ejs
@@ -56,14 +56,16 @@ OURSELVES THIS CONSTITUTION.</b></pre>
     </div>
   </div>
 
-    <div style="background-color: rgba(252, 250, 250,0.7);margin-top: 30px; margin-left: -700px; width: 200%;margin-bottom: 0%;">
-      <footer>
-       
-        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);margin-left: 4%;">
-               © 2024 Copyright:
-          <a class="text-body" href="https://github.com/ANI-IN">ANI-IN</a>
-      </footer>
+  <footer class="footer">
+    <div class="text-center p-3">
+      © 2024 Copyright:
+      <a class="text-body" href="https://github.com/ANI-IN">ANI-IN</a>
     </div>
+  </footer>
+  
+  
+  
+    
   
 </body>
 
