--- a/public/css/home_page_style.css
+++ b/public/css/home_page_style.css
@@ -21,7 +21,7 @@ button {
   margin-top: 15px;
   border: none;
   cursor: pointer;
-  width: 50%;
+  width: 40%;
 }
 
 button:hover {
@@ -54,7 +54,16 @@ span.psw {
 }
 
 .footer {
+  background-color: rgba(252, 250, 250, 0.7);
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+  left: 0;
   text-align: center;
-  padding: 3px;
-  background-color: rgba(0, 0, 0, 0.05);
+  padding: px 0; /* Adjust the padding to increase the size of the footer */
+}
+
+.footer .text-center {
+  width: 90%;
+  margin: 0 auto;
 }
