--- a/public/css/register_profile_style.css
+++ b/public/css/register_profile_style.css
@@ -1,7 +1,35 @@
-body {font-family: Arial, Helvetica, sans-serif;}
-form {border: 3px solid #f1f1f1;}
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  background-image: url('/images/red.jpg');
+  background-size: cover; /* Ensures the background image covers the entire screen */
+  background-position: center; /* Centers the background image */
+  background-repeat: no-repeat;
+  margin: 0; /* Remove default body margin */
+  padding: 0; /* Remove default body padding */
+}
 
-input[type=text], input[type=password] ,input[type=email]{
+form {
+  border: 3px solid #f1f1f1;
+  margin: 0 auto; /* Center the form horizontally */
+  width: 50%; /* Adjust the width of the form as needed */
+}
+
+.form-wrapper {
+  background-color: rgba(255, 255, 255, 0.7); /* White background with 70% opacity */
+  padding: 20px; /* Add padding for spacing */
+}
+
+.container {
+  text-align: center; /* Center-aligns the content within the container */
+}
+
+table {
+  margin: 0 auto; /* Sets left and right margins to 'auto', centering the table */
+}
+
+input[type=text],
+input[type=password],
+input[type=email] {
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
@@ -10,28 +38,45 @@ input[type=text], input[type=password] ,input[type=email]{
   box-sizing: border-box;
 }
 
-button {
-  background-color: #69292e;
+.footer {
+  background-color: rgba(252, 250, 250, 0.7);
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  text-align: center;
+  padding: 20px 0; /* Adjust the padding to increase the size of the footer */
+}
+
+.footer .text-center {
+  width: 90%;
+  margin: 0 auto;
+
+}
+.button {
+  background-color: #69292e; /* Adjust the background color as needed */
   color: white;
   padding: 14px 20px;
   margin: 8px 0;
   border: none;
   cursor: pointer;
   width: 100%;
+  border-radius: 20px; /* Adds rounded corners */
 }
 
-button:hover {
+.button:hover {
   opacity: 0.8;
 }
 
 .cancelbtn {
-  width: auto;
+  width: 15%;
   padding: 10px 18px;
   background-color: #f44336;
 }
 
 .container {
-  padding: 10px;
+  text-align: center;
+  padding: 0px;
 }
 
 span.psw {
