--- a/views/register.ejs
+++ b/views/register.ejs
@@ -13,38 +13,49 @@
 
     <form action="/register" method="POST">
       <div class="container">
-        <p><b>Please select one of the following choices:</b></p>
-              
-        <input type="radio" name="personType" value="c" required> Client
-        <input type="radio" name="personType" value="l" required> Lawyer<br><br><br>
-        
-        <label for="fname"><b>First Name</b></label>
-        <input type="text" placeholder="Enter First Name" name="fname" required>
-        
-        <label for="mname"><b>Middle Name</b></label>
-        <input type="text" placeholder="Enter Middle Name" name="mname">
-      
-        <label for="lname"><b>Last Name</b></label>
-        <input type="text" placeholder="Enter Last Name" name="lname" required>
-        
-        <label for="email"><b>e-mail</b></label>
-        <input type="email" placeholder="Enter Email" name="email" required>
-        <br>
-
-        <label for="password"><b>Password</b></label>
-        <input type="password" placeholder="Enter Password" name="password" required>
-        
-        <label for="password2"><b>Repeat Password</b></label>
-        <input type="password" placeholder="Repeat Password" name="password2" required>
+        <div class="form-wrapper">
+        <form action="/register" method="POST">
+          <table>
+            <tr>
+              <td colspan="2"><b>Please select one of the following choices:</b></td>
+            </tr>
+            <tr>
+              <td style="text-align: left;"><input type="radio" name="personType" value="c" required> Client</td>
+              <td><input type="radio" name="personType" value="l" required> Lawyer</td>
+            </tr>
+            <tr>
+              <td style="text-align: left;"><label for="fname"><b>First Name</b></label></td>
+              <td><input type="text" placeholder="Enter First Name" name="fname" required></td>
+            </tr>
+            <tr>
+              <td style="text-align: left;"><label for="mname"><b>Middle Name</b></label></td>
+              <td><input type="text" placeholder="Enter Middle Name" name="mname"></td>
+            </tr>
+            <tr>
+              <td style="text-align: left;"><label for="lname"><b>Last Name</b></label></td>
+              <td><input type="text" placeholder="Enter Last Name" name="lname" required></td>
+            </tr>
+            <tr>
+              <td style="text-align: left;"><label for="email"><b>E-mail</b></label></td>
+              <td><input type="email" placeholder="Enter Email" name="email" required></td>
+            </tr>
+            <tr>
+              <td style="text-align: left;"><label for="password"><b>Password</b></label></td>
+              <td><input type="password" placeholder="Enter Password" name="password" required></td>
+            </tr>
+            <tr>
+              <td style="text-align: left;"><label for="password2"><b>Repeat Password</b></label></td>
+              <td><input type="password" placeholder="Repeat Password" name="password2" required></td>
+            </tr>
+            <tr>
+              <td colspan="2" class="center-button"><button type="submit" class="button">Register</button></td>
+            </tr>
             
-        <button type="submit" class="button">Register</button>
-        
+          </table>
+        </div>
       </div>
     </form>
-    <form action="/" method="GET">
-      <div class="container" style="background-color:#f1f1f1">
-        <button type="submit" class="cancelbtn">Back</button>
-      </div>
-    </form>
+    <%- include('./partials/footer.ejs') %>
+   
   </ body>
 </html>
