--- a/public/css/login_style.css
+++ b/public/css/login_style.css
@@ -1,8 +1,15 @@
-body {font-family: Arial, Helvetica, sans-serif;}
-form {border: 3px solid #f1f1f1;}
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  background-image: url('/images/red.jpg');
+  background-size: cover; /* Ensures the background image covers the entire screen */
+  background-position: center; /* Centers the background image */
+  background-repeat: no-repeat;
+  margin: 0; /* Remove default body margin */
+  padding: 0; /* Remove default body padding */
+}
 
 .pratik {
-  width: 50%;
+  width: 100%; /* Change the width to 100% */
   padding: 12px 20px;
   margin: 8px 0;
   display: inline-block;
@@ -22,7 +29,7 @@ button {
   margin: 8px 0;
   border: none;
   cursor: pointer;
-  width: 15%;
+  width: 25%;
 }
 
 button:hover {
@@ -36,16 +43,42 @@ button:hover {
 }
 
 
-.container {
-  padding: 1px;
-  
 
+
+.container {
+  
+  width: 50%;
+  margin: 0 auto;
+  padding: 20px;
 }
+
+.form-wrapper {
+  background-color: rgba(255, 255, 255, 0.7); /* White background with 70% opacity */
+  padding: 20px; /* Add padding for spacing */
+}
+
 
 span.psw {
   float: right;
   padding-top: 15px;
 }
+
+.footer {
+  background-color: rgba(252, 250, 250, 0.7);
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  text-align: center;
+  padding: 20px 0; /* Adjust the padding to increase the size of the footer */
+}
+
+.footer .text-center {
+  width: 90%;
+  margin: 0 auto;
+
+}
+
 
 /* Change styles for span and cancel button on extra small screens */
 @media screen and (max-width: 300px) {
