--- a/views/register.ejs
+++ b/views/register.ejs
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <center><h2><i class="fa fa-user-plus" style="font-size:32px"></i>Registration</h2></center>
+    <center><h2 style="color: white;"><i class="fa fa-user-plus" style="font-size:32px"></i> Registration</h2></center>
 
     <%- include('./partials/messages.ejs') %>
 
