fixed minor bugs

--- a/views/lawyer_profile.ejs
+++ b/views/lawyer_profile.ejs
@@ -51,7 +51,12 @@
 
 <body>
     <center><h2 style="color: white;"><i class="fa fa-user-plus" style="font-size:32px"> <%= f_name %>'s Details</i></h2></center>
-
+    <tr>
+        <td colspan="2" style="text-align: center;">
+          <div class="home-button">
+            <a href="/" class="button"><i class="fa fa-home"></i> Home</a>
+        </td>
+      </tr>
     <%- include('./partials/messages.ejs') %>
 
     
