--- a/views/register.ejs
+++ b/views/register.ejs
@@ -8,7 +8,10 @@
 
   <body>
     <center><h2 style="color: white;"><i class="fa fa-user-plus" style="font-size:32px"></i> Registration</h2></center>
-
+    <tr>
+      <td colspan="2" style="text-align: center;"><div class="home-button">
+        <a href="/" class="button"><i class="fa fa-home"></i> Home</a>  </td>
+    </tr>
     <%- include('./partials/messages.ejs') %>
 
     <form action="/register" method="POST">
