--- a/public/css/login_style.css
+++ b/public/css/login_style.css
@@ -22,36 +22,35 @@ body {
 .passwordpad {
   padding-right: 620px;
 }
-button {
-  background-color: #521d1d;
+
+.button {
+  background-color: #69292e; /* Adjust the background color as needed */
   color: white;
   padding: 14px 20px;
   margin: 8px 0;
   border: none;
   cursor: pointer;
-  width: 25%;
+  width: 100%;
+  border-radius: 20px; /* Adds rounded corners */
 }
 
 button:hover {
   opacity: 0.8;
 }
 
+.button:hover {
+  opacity: 0.8;
+}
 .backbtn {
   width: 15%;
   padding: 10px 18px;
   background-color: #f44336;
 }
 
-
-
-
 .container {
-  
-  width: 50%;
-  margin: 0 auto;
-  padding: 20px;
+  text-align: center;
+  padding: 0px;
 }
-
 .form-wrapper {
   background-color: rgba(255, 255, 255, 0.7); /* White background with 70% opacity */
   padding: 20px; /* Add padding for spacing */
