--- a/views/login.ejs
+++ b/views/login.ejs
@@ -65,35 +65,35 @@
     <h1 style="color: white;"><i class="fa fa-user-circle-o" style="font-size:36px"></i> Login</h1>
   </center>
   <%- include('./partials/messages.ejs') %>
+  <br>
+  <tr>
+    <td colspan="2" style="text-align: center;"><a href="/" class="button"><i class="fa fa-home"></i> Home</a></td>
+  </tr>
 
     <form action="/login" method="POST">
       <center>
         <div class="container form-wrapper">
           <table>
+            
             <tr>
               <td colspan="2"><b>Please select one of the following choices:</b></td>
             </tr>
             <tr>
-              <td><input type="radio" name="personType" value="c" required> Client</td>
+              <td style="text-align: left;"><input type="radio" name="personType" value="c" required> Client</td>
               <td><input type="radio" name="personType" value="l" required> Lawyer</td>
             </tr>
             <tr>
-              <td><label for="email"><b>E-Mail:</b></label></td>
+              <td style="text-align: left;"><label for="email"><b>E-Mail:</b></label></td>
               <td><input class="pratik" type="email" placeholder="Enter Email" name="email" required></td>
             </tr>
             <tr>
-              <td><label for="password"><b>Password:</b></label></td>
+              <td style="text-align: left;"><label for="password"><b>Password:</b></label></td>
               <td><input class="pratik" type="password" placeholder="Enter Password" name="password" required></td>
             </tr>
             <tr>
               <td colspan="2" style="text-align: center;"><button type="submit">Login</button></td>
             </tr>
-            <tr>
-              <td colspan="2" style="text-align: center;">
-                <div class="home-button">
-                  <a href="/" class="button"><i class="fa fa-home"></i> Home</a>
-              </td>
-            </tr>
+  
           </table>
         </div>
       </center>
